--- a/index.html
+++ b/index.html
@@ -6,6 +6,22 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+	
+	<ul class="socials">
+            <li class="socials-item">
+                <a href="#" class="social-link vk" target="_blank">vk.com</a>
+            </li>
+            <li class="socials-item">
+                <a href="#" class="social-link tw" target="_blank">twitter.com</a>
+            </li>
+            <li class="socials-item">
+                <a href="#" class="social-link fb" target="_blank">facebook.com</a>
+            </li>
+            <li class="socials-item">
+                <a href="#" class="social-link gt" target="_blank">github.com</a>
+            </li>
+    </ul>
+
 	<div class="wrapper">
 
 		<div class="left">
